Changes to fix issues with the spacing for repeaters

--- a/src/modules/repeater/repeater-item.component.scss
+++ b/src/modules/repeater/repeater-item.component.scss
@@ -2,12 +2,12 @@
 
 .sky-repeater-item {
   display: flex;
-  padding: $sky-padding;
+  padding: $sky-padding $sky-padding 0 $sky-padding;
   @include sky-border(row);
 }
 
 .sky-repeater-item-left {
-  padding-top: 7px;
+  margin-top: -6px;
 }
 
 .sky-repeater-item-right {
@@ -15,12 +15,12 @@
 }
 
 .sky-repeater-item-header {
-  align-items: center;
   display: flex;
 }
 
 .sky-repeater-item-chevron {
   margin-left: $sky-margin;
+  margin-top: -3px;
 }
 
 .sky-repeater-item-context-menu {
@@ -28,7 +28,7 @@
 }
 
 .sky-repeater-item-checkbox {
-  padding: 0 $sky-padding 0 0;
+  padding-right: $sky-padding;
 }
 
 .sky-repeater-item-selected {
@@ -38,7 +38,8 @@
 
 .sky-repeater-item-title {
   @include sky-emphasized();
-  margin: $sky-margin 0;
+  padding: 0 0 $sky-padding 0;
+  margin: 0;
   flex-grow: 1;
 }
 
